--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,28 @@
 body {
-  margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-ul {
+body,
+h1,
+ul,
+p {
   margin: 0px;
+}
+
+ul {
   padding: 0px;
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
+  color: inherit;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
 
 /* <-- HEADER -->*/
 
@@ -61,8 +71,8 @@ a{
   width: 100%;
 }
 
-@media (max-width: 800px){
-  .header-menu{
+@media (max-width: 800px) {
+  .header-menu {
     gap: 20px;
   }
 
@@ -76,17 +86,74 @@ a{
     background: #2e2e2e;
   }
 
-  .header a:after{
+  .header a:after {
     display: none;
   }
 }
 
-@media (max-width: 600px){
-  .header-menu{
+@media (max-width: 600px) {
+  .header-menu {
     gap: 12px;
   }
 
   .header-menu a {
     padding: 8px 12px;
   }
+}
+
+/* -- INTRODUCAO --  */
+
+.introducao-bg {
+  background: #000000;
+  color: #ffffff;
+}
+
+.introducao {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px 40px;
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+}
+
+.introducao h1 {
+  margin-bottom: 32px;
+  font-size: 64px;
+  line-height: 1.125;
+}
+
+.introducao h1 span {
+  color: #ffbf00;
+}
+
+.introducao p {
+  margin-bottom: 20px;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #b2b2b2;
+}
+
+.introducao-conteudo {
+  align-self: end;
+  padding-bottom: 80px;
+}
+
+.introducao a {
+  display: inline-block;
+  padding: 16px 32px;
+  background: linear-gradient(#ffbf00, #f2a50c);
+  border-radius: 4px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  color: #332200;
+  font-size: 18px;
+  line-height: 1.33;
+  font-weight: bold;
+}
+
+.introducao a:hover {
+  background: linear-gradient(#ffb60d, #e59317);
 }
