--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  padding-bottom: 600px;
 }
 
 body,
@@ -106,6 +107,7 @@ img {
 .introducao-bg {
   background: #000000;
   color: #ffffff;
+  box-shadow: inset 0 -120px #ffffff;
 }
 
 .introducao {
@@ -138,7 +140,13 @@ img {
 
 .introducao-conteudo {
   align-self: end;
-  padding-bottom: 80px;
+  padding-bottom: 200px;
+}
+
+.introducao img {
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
 }
 
 .introducao a {
@@ -156,4 +164,47 @@ img {
 
 .introducao a:hover {
   background: linear-gradient(#ffb60d, #e59317);
+}
+
+@media (max-width: 600px){
+  .introducao a{
+    padding: 12px 16px;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .introducao h1 {
+    font-size: 48px;
+  }
+
+  .introducao p {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 800px) {
+  .introducao-bg {
+    padding-top: 40px;
+    background: #111111;
+    box-shadow: inset 0 -60px #FFFFFF;
+  }
+
+  .introducao {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+  .introducao h1 {
+    font-size: 32px;
+    margin-bottom: 16px;
+  }
+
+  .introducao img {
+    height: 300px;
+    width: 100%;
+  }
+
+  .introducao-conteudo {
+    padding-bottom: 0px;
+  }
 }
