--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,7 @@
 @import "./utility/components.css";
 
 /* Home */
-@import "./home/introducao.css"
+@import "./home/introducao.css";
+
+/* Bicicletas */
+@import "./bicicletas/bicicletas-lista.css";
