--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@
 @import "./home/depoimento.css";
 
 /* Bicicletas */
+@import "./bicicletas/bicicletas.css";
 @import "./bicicletas/bicicletas-lista.css";
 
 /* Seguros */
