--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,15 @@
 @import "./bicicletas/bicicletas.css";
 @import "./bicicletas/bicicletas-lista.css";
 
+/* Bicicleta-Página */
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/bicicleta-seguro.css";
+
 /* Seguros */
 @import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
+
 
 /* Termos */
 @import "./termos/termos.css";
