--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
 
 /* Utility */
 @import "./utility/components.css";
+@import "./utility/formulario.css";
+
 
 /* Home */
 @import "./home/introducao.css";
@@ -29,6 +31,11 @@
 @import "./seguros/seguros.css";
 @import "./seguros/vantagens.css";
 @import "./seguros/perguntas.css";
+
+/* Contato */
+@import"./contato/contato.css";
+@import"./contato/lojas.css";
+
 
 
 /* Termos */
