--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 /* Utility */
 @import "./utility/components.css";
 @import "./utility/formulario.css";
-
+@import "./utility/animacao.css";
 
 /* Home */
 @import "./home/introducao.css";
@@ -33,10 +33,11 @@
 @import "./seguros/perguntas.css";
 
 /* Contato */
-@import"./contato/contato.css";
-@import"./contato/lojas.css";
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
 
-
+/* Orçamento */
+@import "./orcamento/orcamento.css";
 
 /* Termos */
 @import "./termos/termos.css";
